<resources>
    <string name="app_name">Task Manager</string>
    <string name="action_settings">Settings</string>

    <string name="inbox_menu_item">Входящие</string>
    <string name="today_menu_item">Сегодня</string>
    <string name="week_menu_item">Следующие 7 дней</string>
    <string name="projects_menu_item">Проекты</string>
    <string name="settings_menu_item">Настройки</string>
    <string name="title_activity_task_edit">TaskEditActivity</string>
    <string name="task_hint">Задача</string>
    <string name="project_hint">Проект</string>
    <string name="due_date_hint">Срок выполнения</string>
    <string name="done_button_label">Выполнено</string>
    <string name="delete_button_label">Удалить</string>

    <string name="set_time">Время</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
</resources>
