<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tk.esume.taskmanager.presentation.activities.TaskEditActivity"
    tools:showIn="@layout/activity_task_edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:text="@string/task_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/firstTextColor"
            android:textSize="16sp"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:text="@string/project_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/firstTextColor"
            android:textSize="16sp"
            android:inputType="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:text="@string/due_date_hint" />

        <EditText
            android:id="@+id/dueDateEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/firstTextColor"
            android:textSize="16sp"
            android:inputType="datetime" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?attr/buttonBarStyle">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done_button_label"
                android:textColor="@color/firstTextColor"
                style="?attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_button_label"
                android:textColor="@color/firstTextColor"
                style="?attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
